fix: refresh index before test